renames and adds