@@ -1,3 +1,12 @@
+package spells;
+
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.GZIPOutputStream;
+
 public class GzipUtils {
 
     public static byte[] compressString(String data) throws IOException {
@@ -12,7 +21,7 @@ public class GzipUtils {
     public static byte[] decompress(byte[] compressed) throws IOException {
         try (ByteArrayInputStream bis = new ByteArrayInputStream(compressed);
              GZIPInputStream gis = new GZIPInputStream(bis)) {
-            return IOUtils.toByteArray(gis);
+            return gis.readAllBytes();
         }
     }
 }
